# MultilingualVoiceAssistant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: PHASE_TEMPLATE.md  PROJECT_SPECIFICATION.md  README.md  ROADMAP.md
docs/phases/: phase-0-foundation.md
notebooks/exploration/: 00_setup_test.ipynb
reports/exploration/: 00_setup_test.html
scripts/: export_notebooks.py
src/polyvoice/: __init__.py
src/polyvoice/api/: __init__.py
src/polyvoice/asr/: __init__.py
src/polyvoice/common/: __init__.py
src/polyvoice/language_id/: __init__.py
src/polyvoice/orchestrator/: __init__.py
src/polyvoice/pronunciation/: __init__.py
src/polyvoice/tts/: __init__.py
tests/: conftest.py
tests/unit/: test_polyvoice.py
